# lruqueue

./: Makefile.am  Makefile.in  README.md  configure  configure.ac
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2  traces.3
src/: .#Makefile.am  Makefile.am  Makefile.in  lrudef.h  lruhash.c  lruhash.h  lrunode.h  lruqueue.c  lruqueue.h
test/: Makefile.am  Makefile.in  lrutest.c
